# KeyCrypt-Shield-X

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
ci_cd/: pipeline_generator.py  pre_commit_hooks.py  release_automation.py
deployment/backup/: backup_strategy.py
deployment/disaster_recovery/: replication_config.yaml  restore_procedure.py
deployment/docker/: Dockerfile  docker-compose.yml  entrypoint.py  prometheus.yml
deployment/kubernetes/: deployment.yaml
deployment/logging/: fluentd_config.conf
deployment/monitoring/: alertmanager_config.yaml  grafana_dashboards.json  prometheus_rules.yaml
deployment/optimization/: caching_strategy.py  cdn_configuration.py  connection_pooling.py  query_optimizer.py
deployment/production/: production_config_generator.py
deployment/security/: certificate_manager.py  secrets_management.py  security_baseline.yaml
docs/: api-reference.md  generate_api_docs.py  generate_api_reference.py  generate_architecture_diagrams.py  generate_user_guide.py  openapi.json  postman-collection.json
examples/tutorials/: advanced_tutorial.py  basic_tutorial.py
examples/use_cases/: financial_example.py  healthcare_example.py
src/abstractions/: __init__.py  crypto_provider.py  intelligence_provider.py  key_provider.py  storage_provider.py
src/ai/: anomaly_detection.py  gnn_correlation.py  risk_predictor.py  threat_intelligence.py
src/api/: authentication.py  grpc_api.py  rest_api.py
src/audit/: audit_framework.py  compliance_reporting.py  (+1 more)
tools/: audit_reporter.py  cli_completion_generator.py  code_generator.py  code_quality_checker.py  config_validator.py  configuration_validator.py  crypto_visualizer.py  dependency_analyzer.py  health_check.py  interactive_debugger.py  key_management_cli.py  log_analyzer.py  migration_assistant.py  mutation_testing.py  performance_monitor.py  performance_profiler.py  plugin_generator.py  plugin_tester.py  plugin_validator_cli.py  security_scanner.py  test_coverage_analyzer.py
(+376 files in other folders)
