[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "keycrypt-shield-x"
version = "0.1.0"
description = "Quantum-resistant cryptographic storage system"
authors = ["Pranay Sharma"]
license = "MIT"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "quantum", "security", "storage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
cryptography = "^44.0.0"
pycryptodome = "^3.21.0"
liboqs-python = "^0.12.0"
qiskit = "^1.3.0"
cirq = "^1.4.1"
torch = "^2.6.0"
transformers = "^4.49.0"
pydantic = "^2.11.1"
pydantic-settings = "^2.8.1"
PyYAML = "^6.0.2"
loguru = "^0.7.2"
aiohttp = "^3.11.16"
torch-geometric = "^2.6.1"
networkx = "^3.4.2"
matplotlib = "^3.10.1"
argon2-cffi = "^23.1.0"
prometheus-client = "^0.21.1"
fastapi = "^0.116.1"
uvicorn = {version = "^0.35.0", extras = ["standard"]}
python-multipart = "^0.0.20"
python-jose = {version = "^3.4.0", extras = ["cryptography"]}
redis = "^5.2.1"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
protobuf = "^5.29.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
ruff = "^0.11.0"

[tool.poetry.scripts]
keycrypt-shield-x = "keycrypt_shield_x.cli:main"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
